# ufo-etl-pipeline

./: .gitignore  README.md  databricks.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
my_package/: __init__.py  common.py
my_package/tasks/: sample_etl_job.py  ufo_etl_job.py
notebooks/: explorative_analysis.py  run_etl_job.py  run_unit_test.py
resources/: dev_jobs.yml  dev_jobs_wheel.yml
tests/: conftest.py  test_sample.py  test_ufo_etl.py
